# jirka.marsik.me

./: .gitignore  Makefile  confirm.sh  default.nix  index.html  personal-site.cabal  research.html  site  site.hs
pages/: about.md  clojure-loria-2013.md  latex-2014.md
posts/: 2012-12-11-type-raising-and-the-cooperative-construction-of-meaning.md  2012-12-19-the-working-hipster-s-clojure.md  2014-02-26-my-phd-topic-in-3-minutes.md  my-phd-topic-in-3-minutes.md  the-working-hipster-s-clojure.md  type-raising-and-the-cooperative-construction-of-meaning.md
research/: algebraic-effects-and-handlers-in-natural-language-interpretation.md  pragmatic-side-effects.md
templates/: analytics.html  comments.html  default.html  post.html
