name:               personal-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >=1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.6.*
                  , filepath >= 1.3.0.1
                  , containers >= 0.5.0.0
  ghc-options:      -threaded
  default-language: Haskell2010
